--- a/app/src/main/resources/WEB-INF/web.xml
+++ b/app/src/main/resources/WEB-INF/web.xml
@@ -4,10 +4,10 @@
    xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee 
    http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
-   <display-name>Spaceapps Earth Observation</display-name>
+   <display-name>Shop Example</display-name>
 
    <servlet>
-      <servlet-name>eo-application</servlet-name>
+      <servlet-name>shop-application</servlet-name>
       <servlet-class>
          org.springframework.web.servlet.DispatcherServlet
       </servlet-class>
@@ -15,7 +15,7 @@
    </servlet>
 
    <servlet-mapping>
-      <servlet-name>eo-application</servlet-name>
+      <servlet-name>shop-application</servlet-name>
       <url-pattern>/</url-pattern>
    </servlet-mapping>
    
